removed reference to notnot

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
 <pre>   #is_not
    #isnt
-   #notnot</pre>
+   #andnot</pre>
 
    <p><strong>NOTE</strong>: be wary of using 'unless' with Object#is or Object#aint -- if
    the method doesn't exist on the receiver (it does not respond to revoked?),
